--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ body{margin:0;background:var(--bg-grad);color:var(--ink);font-family:system-ui,-
 <body>
 <div class="container center">
   <div class="hero">
-    <h1>Happy Birthday! 🎉</h1>
-    <p>I made you a tiny web adventure with minigames, quests, and a shop. Earn coins, unlock letters, and find your big present. 💌</p>
+    <h1>Happy Birthday, my love <3</h1>
+    <p>I I wish I could be with you on your special day, but since you're so far away, this is my small gift for you. 💌</p>
     <div class="buttons">
       <a class="btn" href="minigames.html">Minigames</a>
       <a class="btn" href="quests.html">Quests</a>
