--- a/minigames.html
+++ b/minigames.html
@@ -53,22 +53,22 @@ p.note{color:var(--muted);margin:8px 16px}
   <p class="note">Open a game and click Start to begin. Coins are shared across pages.</p>
 
   <details>
-    <summary>❤️ Hearts (your original game)</summary>
+    <summary>❤️ Catch the hearts</summary>
     <div class="inner">
       <div class="launch">
         <button class="start" data-target="g1">Start</button>
-        <p class="note">Game loads after you click Start.</p>
+        <p class="note">Each heart gives you one coin.</p>
       </div>
       <iframe id="g1" data-src="hearts_v2.html" title="Hearts Game"></iframe>
     </div>
   </details>
 
   <details>
-    <summary>💖 Heart Clicker (15 seconds)</summary>
+    <summary>💖 Heart Clicker</summary>
     <div class="inner">
       <div class="launch">
         <button class="start" data-target="g2">Start</button>
-        <p class="note">Click as many hearts as possible in 15s.</p>
+        <p class="note">Each heart gives you one coin.</p>
       </div>
       <iframe id="g2" data-src="clicker15.html" title="Heart Clicker"></iframe>
     </div>
