--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body{margin:0;background:var(--bg-grad);color:var(--ink);font-family:system-ui,-
 <div class="container center">
   <div class="hero">
     <h1>Happy Birthday, my love <3</h1>
-    <p>I I wish I could be with you on your special day, but since you're so far away, this is my small gift for you. 💌</p>
+    <p>I wish I could be with you on your special day, but since you're so far away, this is my small gift for you. 💌</p>
     <div class="buttons">
       <a class="btn" href="minigames.html">Minigames</a>
       <a class="btn" href="quests.html">Quests</a>
