--- a/minigames.html
+++ b/minigames.html
@@ -50,7 +50,7 @@ p.note{color:var(--muted);margin:8px 16px}
 
 <div class="container">
   <h1 style="margin:8px 0;">Minigames</h1>
-  <p class="note">Open a game and click Start to begin. Coins are shared across pages.</p>
+  <p class="note">Play games to earn coins!</p>
 
   <details>
     <summary>❤️ Catch the hearts</summary>
