--- a/quests.html
+++ b/quests.html
@@ -40,16 +40,16 @@ h1{margin:12px 0}
       <a href="quests.html">Quests</a>
       <a href="shop.html">Shop</a>
     </nav>
-    <div class="pill">🪙 Coins: <span id="coinCount">0</span></div>
+    <div class="pill">⛁ Coins: <span id="coinCount">0</span></div>
   </div>
 </header>
 
 <div class="container">
-  <h1>Quest Board 📜</h1>
-  <p class="note" style="color:var(--muted)">Complete little quests for bonus coins (+5 each).</p>
+  <h1>📜 Quests</h1>
+  <p class="note" style="color:var(--muted)">Every finished quests gives you 5 coins.</p>
   <div class="grid" id="questList"></div>
   <div style="margin-top:16px">
-    <button class="btn ghost" id="resetBtn">Reset progress</button>
+    <button class="btn ghost" id="resetBtn">reset progress</button>
   </div>
 </div>
 
